syntax = "proto3";
option csharp_namespace = "MerchApi.Grpc";
package MerchApi;

import "google/protobuf/timestamp.proto";

service MerchApiGrpc {
  rpc GetMerchAvailability (GetMerchAvailabilityRequest) returns (GetMerchAvailabilityResponse);
  rpc GiveOutMerch (GiveOutMerchRequest) returns (GiveOutMerchResponse);
}

message GetMerchAvailabilityRequest {
	int64 id = 1;
}

message GetMerchAvailabilityResponse {
	GetMerchAvailabilityResponseUnit merchAvailabilityInfo = 1;
}

message GetMerchAvailabilityResponseUnit {
	int64 id = 1;
	string name = 2;
	google.protobuf.Timestamp receiptDate = 3;
}

message GiveOutMerchRequest {
	int64 id = 1;
}

message GiveOutMerchResponse {
	GiveOutMerchResponseUnit merch = 1;
}

message GiveOutMerchResponseUnit {
	int64 id = 1;
}